feat: implementación completa de datos en tiempo real con WebSocket
✨ Nuevas Funcionalidades:
- Vista en tiempo real en /live con datos por WebSocket
- Indicador de estado de conexión (conectado/desconectado/reconectando)
- Arquitectura desacoplada preparada para migración a TCP
- Servidor dual: HTTP (3000) + WebSocket (8080)
- Reconexión automática con backoff exponencial

📦 Archivos Creados:
- chartsRealtimeSlice.js - Redux slice para tiempo real
- IDataService.js - Interfaz abstracta para servicios
- WebSocketService.js - Implementación de WebSocket
- dataAdapter.js - Transformaciones de datos
- ConnectionStatus.jsx - Componente de estado de conexión
- HomeLive/ - Layout para vista en tiempo real

🔧 Modificaciones:
- server.cjs - Añadido WebSocket server con streaming 1/seg
- App.jsx - Añadida ruta /live
- store.js - Registrado chartsRealtimeSlice
- CandleCharts.jsx - Soporte dual (estático/realtime)
- package.json - Dependencia 'ws' añadida

📚 Documentación:
- IMPLEMENTATION_GUIDE.md - Guía completa de uso
- IMPLEMENTATION_SUMMARY.md - Resumen ejecutivo
- STRUCTURE.md - Estructura del proyecto
- QUICK_START.md - Scripts y comandos útiles
- .env.example - Template de configuración

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
+# Environment variables template
+# Copy this to .env and adjust values as needed
+
+# API URLs
 VITE_CANDLE_CHARTS=http://localhost:3000/api/data
 
-# WebSocket URL para datos en tiempo real
+# WebSocket URL
 VITE_WEBSOCKET_URL=ws://localhost:8080
 
 # Server Ports
