--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "sass": "^1.66.1",
     "ts-node": "^10.9.1",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "ws": "^8.14.0"
   }
 }
